# MCP

./: README.md
Expendature_System/: dummyapi.py
Expendature_System/backend/: alembic.ini  api_spec.json  app.py  pyproject.toml
Expendature_System/backend/alembic/: env.py
Expendature_System/backend/alembic/versions/: 6ec529bacbe4_create_users_table.py
Expendature_System/backend/app/config/: config.ini
Expendature_System/backend/app/constants/: constants.py
Expendature_System/backend/app/models/: budget.py  catagories.py  dummy.py  expense.py
Expendature_System/backend/app/routes/: router.py
Expendature_System/backend/app/routes/v1/: expense_routes.py  routes.py
Expendature_System/backend/app/schema/: budget.py  catagories.py  expense.py
Expendature_System/backend/app/services/: budget_service.py  catagory_service.py  expense_service.py  report_service.py
Expendature_System/backend/app/utils/: config_manager.py  database_connection.py
Expendature_System/client/: client.py  constant.py  pyproject.toml
Expendature_System/fintrac/: README.md  pubspec.yaml
Expendature_System/fintrac/android/app/: build.gradle.kts
Expendature_System/fintrac/ios/Runner/: Info.plist
Expendature_System/fintrac/ios/Runner.xcodeproj/: project.pbxproj
Expendature_System/fintrac/lib/: main.dart
Expendature_System/fintrac/lib/utils/: dateformater.dart
Expendature_System/fintrac/linux/: CMakeLists.txt
Expendature_System/fintrac/test/: widget_test.dart
Expendature_System/fintrac/web/: index.html  manifest.json
Expendature_System/fintrac/windows/: CMakeLists.txt
(+24 files in other folders)
